@@ -4,27 +4,21 @@ import android.content.Context;
 import android.net.ConnectivityManager;
 import android.net.NetworkCapabilities;
 import android.os.Build;
-import android.util.Log;
 
-import com.example.matbakhy.data.Meals.MealRepositry;
-import com.example.matbakhy.data.Meals.dataSource.AreaRemoteResponse;
-import com.example.matbakhy.data.Meals.dataSource.CategoriesRemoteResponse;
-import com.example.matbakhy.data.Meals.dataSource.IngredientRemoteResponse;
-import com.example.matbakhy.data.Meals.dataSource.MealRemoteResponse;
-import com.example.matbakhy.data.Meals.model.Area;
-import com.example.matbakhy.data.Meals.model.Category;
-import com.example.matbakhy.data.Meals.model.Ingredient;
-import com.example.matbakhy.data.Meals.model.Meal;
+import com.example.matbakhy.data.MealRepository;
+import com.example.matbakhy.data.model.Ingredient;
 import com.example.matbakhy.presentation.Search.view.SearchView;
 
 import java.util.ArrayList;
 import java.util.List;
 
+import io.reactivex.android.schedulers.AndroidSchedulers;
+
 public class SearchPresenterImpl implements SearchPresenter {
-    private MealRepositry mealRepositry;
+    private MealRepository mealRepository;
     private SearchView searchView;
     public SearchPresenterImpl(Context context){
-        mealRepositry = new MealRepositry(context);
+        mealRepository = new MealRepository(context);
     }
 
     @Override
@@ -37,128 +31,88 @@ public class SearchPresenterImpl implements SearchPresenter {
         this.searchView = null;
     }
     public void getAllCategories() {
-        mealRepositry.getAllCategories(new CategoriesRemoteResponse() {
-            @Override
-            public void onSuccess(List<Category> categories) {
-                searchView.getCategories(categories);
-            }
-            @Override
-            public void onFailure(String errorMessage) {
-                searchView.onFailure(errorMessage);
-            }
-        });
+        mealRepository.getAllCategories()
+                .observeOn(AndroidSchedulers.mainThread())
+                .subscribe(
+                        categories -> searchView.getCategories(categories),
+                        throwable -> searchView.onFailure(throwable.getMessage())
+                );
     }
     @Override
     public void getAllCountries() {
-        mealRepositry.getAllCountries(new AreaRemoteResponse() {
-            @Override
-            public void onSuccess(List<Area> areas) {
-                searchView.getCountries(areas);
-            }
-            @Override
-            public void onFailure(String errorMessage) {
-                searchView.onFailure(errorMessage);
-            }
-        });
+        mealRepository.getAllCountries()
+                .observeOn(AndroidSchedulers.mainThread())
+                .subscribe(
+                        countries -> searchView.getCountries(countries),
+                        throwable -> searchView.onFailure(throwable.getMessage())
+                );
     }
 
     @Override
     public void getAllIngredients() {
-        mealRepositry.getAllIngredients(new IngredientRemoteResponse() {
-            @Override
-            public void onSuccess(List<Ingredient> ingredients) {
-                List<String> result = new ArrayList<>();
-                Log.d("SearchFragment", "onSuccess: " + ingredients.size());
-
-                for (Ingredient ingredient : ingredients){
-                    result.add(ingredient.getName());
-                }
-                searchView.getIngredients(result);
-                Log.d("SearchFragment", "onSuccess: " + result.size());
-            }
-            @Override
-            public void onFailure(String errorMessage) {
-                searchView.onFailure(errorMessage);
-            }
-        });
+        mealRepository.getAllIngredients()
+                .map(ingredients -> {
+                    List<String> ingredientNames = new ArrayList<>();
+                    for (Ingredient ingredient : ingredients) {
+                        ingredientNames.add(ingredient.getName());
+                    }
+                    return ingredientNames;
+                })
+                .observeOn(AndroidSchedulers.mainThread())
+                .subscribe(
+                        ingredients -> searchView.getIngredients(ingredients),
+                        throwable -> searchView.onFailure(throwable.getMessage())
+                );
     }
 
     public void getMealOfCategory(String categoryName) {
-        if (mealRepositry == null) return;
-
-        mealRepositry.getMealOfCategory(new MealRemoteResponse() {
-            @Override
-            public void onSuccess(List<Meal> meals) {
-                Log.d("Meals", "onSuccess: "+ meals.size());
-                searchView.onSuccess(meals);
-            }
-            @Override
-            public void onFailure(String error) {
-                searchView.onFailure(error);
-            }
-        }, categoryName);
+        mealRepository.getMealOfCategory(categoryName)
+                .observeOn(AndroidSchedulers.mainThread())
+                .subscribe(
+                        meals -> searchView.onSuccess(meals),
+                        throwable -> searchView.onFailure(throwable.getMessage())
+                );
     }
 
     @Override
     public void getMealOfCountry(String countryName) {
-        if (mealRepositry == null) return;
-
-        mealRepositry.getMealOfCountry(new MealRemoteResponse() {
-            @Override
-            public void onSuccess(List<Meal> meals) {
-                Log.d("Meals", "onSuccess: "+ meals.size());
-                searchView.onSuccess(meals);
-            }
-            @Override
-            public void onFailure(String error) {
-                searchView.onFailure(error);
-            }
-        }, countryName);
+        mealRepository.getMealOfCountry(countryName)
+                .observeOn(AndroidSchedulers.mainThread())
+                .subscribe(
+                        meals -> searchView.onSuccess(meals),
+                        throwable -> searchView.onFailure(throwable.getMessage())
+                );
     }
 
     @Override
     public void getMealOfIngredient(String ingredient) {
-        mealRepositry.getMealOfIngredient(new MealRemoteResponse() {
-            @Override
-            public void onSuccess(List<Meal> mealList) {
-                Log.d("SearchFragment", "onSuccess: "+ mealList.size());
-                searchView.onSuccess(mealList);
-            }
-
-            @Override
-            public void onFailure(String errorMessage) {
-                searchView.onFailure(errorMessage);
-            }
-        }, ingredient);
+        mealRepository.getMealOfIngredient(ingredient)
+                .observeOn(AndroidSchedulers.mainThread())
+                .subscribe(
+                        meals -> searchView.onSuccess(meals),
+                        throwable -> searchView.onFailure(throwable.getMessage())
+                );
     }
 
     @Override
     public void getMealByName(String name) {
-        mealRepositry.getMealByName(new MealRemoteResponse() {
-            @Override
-            public void onSuccess(List<Meal> mealList) {
-                searchView.getMealByName(mealList.get(0));
-            }
-
-            @Override
-            public void onFailure(String errorMessage) {
-                searchView.onFailure(errorMessage);
-            }
-        },name);
+        mealRepository.getMealByName(name)
+                .observeOn(AndroidSchedulers.mainThread())
+                .subscribe(
+                        meals -> searchView.getMealByName(meals.getFirst()),
+                        throwable -> searchView.onFailure(throwable.getMessage())
+                );
     }
     @Override
     public void getMealByFLetter(String FLetter) {
-        mealRepositry.getMealByFLetter(new MealRemoteResponse() {
-            @Override
-            public void onSuccess(List<Meal> mealList) {
-                searchView.getMealByFLetter(mealList);
-            }
+        mealRepository.getMealByFLetter(FLetter)
+                .observeOn(AndroidSchedulers.mainThread())
+                .subscribe(
+                        meals -> searchView.onSuccess(meals),
+                        throwable -> searchView.onFailure(throwable.getMessage())
+                );
 
-            @Override
-            public void onFailure(String errorMessage) {
-                searchView.onFailure(errorMessage);
-            }
-        },FLetter);
+
     }
     public boolean isNetworkAvailable(Context context ) {
         ConnectivityManager cm = (ConnectivityManager) context.getSystemService(Context.CONNECTIVITY_SERVICE);
